--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <div class="col-sm-8">
                 <h2>Where it all started</h2>
                 <h5>2012</h5>
-                <img src="images/Studio_Close.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
-                <p>There is not much yet!</p>
-                <p>
-                    It dawned on me that I had always wanted to get back into the music
+                <p><img src="images/Studio_Close.JPG" class="img-thumbnail" 
+                         alt="Cinque Terre" style="width:204px; height:136px; 
+                            float:left;margin-right:15px;">
+                    <b>THERE WASN'T' NOT MUCH YET!</b> Howver, it dawned on me that I had always wanted to get back into the music
                     and the recording industry and the timing was perfect as I had fewer financial responsibilities.
                     I finally got up enough nerve and money to purchase my first synthesizer workstation.
                     I waited until I got a check from the government in the form of a tax return and headed out to Sam Ash
-                    music store and bought a 
+                    music store and bought a
                     <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html" target="_blank">Yamaha Motif ES8</a>,
-                    a dynamic microphone, and a pair of 
+                    a dynamic microphone, and a pair of
                     <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">Sanson 50a</a>
                     active monitors with subwoofer.
                     Enough power and capabilities to start recording some pretty decent beats.
@@ -67,10 +67,11 @@
                 </p>
                 <h2 class="mt-5">It's Complete</h2>
                 <h5>2016</h5>
-                <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
-                <p></p>
-                <p>
-                    I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
+                
+                <p><img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" 
+                        style="width:204px; height:136px; 
+                            float:left;margin-right:15px;">
+                    <b>YEAH BABY!</b>   I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
                     I have never heard my music sound so good. The frequency response is flat at the low, mid and high
                     end of the frequency spectrum. The true test will come when I bounce some tracks down to CD and play
                     them in the trusty car. If they play well in the car and on my home hi-fi system, it will mean that
