--- a/abelton_routing.html
+++ b/abelton_routing.html
@@ -9,15 +9,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <style>
-        h2 {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <header-component></header-component>
-    <h2>Abelton Live to NI Kore Routing</h2>
+    <h2 class="video">Abelton Live to NI Kore Routing</h2>
     <div class="video">
         <video controls autoplay>
             <source src="videos/K2 Routing Abelton.mp4" type="video/mp4">
