--- a/contact.html
+++ b/contact.html
@@ -9,25 +9,17 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <style>
-
-        p.mystyle {
-            padding: 20px;
-            line-height: 25px;
-            font-size: x-large;
-            font-family: "Times New Roman", Times, serif;
-        }
-    </style>
 </head>
 <body>
     <header-component></header-component>
     <div class="container mt-3">
         <div class="row">
             <div class="col-sm-2">
-                <img src="images/MyWebPic.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
+                <img src="images/MyWebPic.JPG" class="img-thumbnail" alt="Cinque Terre" 
+                     width="204" height="136">
             </div>
             <div class="col-sm-8">
-                <p class="mystyle">
+                <p class="contact">
                     <strong>Terrence Lennon</strong>
                     <br>
                     <strong>1234 Main Street</strong> <br>
@@ -37,7 +29,9 @@
                 </p>
             </div>
         </div>
-        <span> <em>A professional recording engineer, musician, songwriter, and producer of electronic, hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to make your next demo or begin your next musical project.</em></span>
+        <span> <em>A professional recording engineer, musician, songwriter, and producer of electronic, 
+            hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to 
+            make your next demo or begin your next musical project.</em></span>
     </div>
 </body>
 </html>﻿
