--- a/kontakt_automation.html
+++ b/kontakt_automation.html
@@ -9,15 +9,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
-    <style>
-        h2 {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <header-component></header-component>
-    <h2>Native Instruments Kontakt Automation</h2>
+    <h2 class="video">Native Instruments Kontakt Automation</h2>
     <div class="video">
         <video controls autoplay>
             <source src="videos/Kontakt Automation.mp4" type="audio/mp4">
