--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,26 @@
                 </p>
             </div>
         </div>
-        <span> <em>A professional recording engineer, musician, songwriter, and producer of electronic, 
-            hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to 
-            make your next demo or begin your next musical project.</em></span>
+        <span>
+            <em>
+                A professional recording engineer, musician, songwriter, and producer of electronic,
+                hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to
+                make your next demo or begin your next musical project.
+            </em>
+        </span>
+        <div class="col-sm-12">
+            <img src="images/testimonial_logo_clear.png"
+                 alt="Cinque Terre" class="nohover">
+            <p class="reviewer">
+                <span class="reviewer">Julie... </span>I wanted to create a demo
+                to upload it one of those cloud composer services so my friends and family can hear me sing.
+                I had no idea whet the music should sound like other than what was in my head. IKP recorded
+                my vocals on a track and when I returned, they produced a beat that matched perfectly.
+                They even overdubbed my vocals and created harmony backing tracks with my own voice.
+                They tuned everything so that I sounded perfect. It was AMAZING and
+                my freinds say I should submit the track to a record compnay. WOW!...
+            </p>
+        </div>
     </div>
 </body>
 </html>﻿
