--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <div class="col-sm-8">
                 <h2>Where it all started</h2>
                 <p class="year">2012</p>
-                <p><img src="images/Studio_Close.JPG" class="img-thumbnail" 
-                         alt="Cinque Terre" style="width:204px; height:136px; 
-                            float:left;margin-right:15px;">
+                <p>
+                    <img src="images/Studio_Close.JPG" class="img-thumbnail"
+                         alt="Cinque Terre" style="width:204px; height:136px;
+                            float:left; margin-right:15px;">
                     <b>THERE WASN'T' NOT MUCH YET!</b> Howver, it dawned on me that I had always wanted to get back into the music
                     and the recording industry and the timing was perfect as I had fewer financial responsibilities.
                     I finally got up enough nerve and money to purchase my first synthesizer workstation.
@@ -88,7 +89,11 @@
             </div>
             <div class="col-sm-4">
                 <h2>About Me</h2>
-                <img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">
+                <!--<img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">-->
+                <a target="_blank" href="images/Studio_Old.JPG">
+                    <img src="images/Studio_Old.JPG"
+                         alt="Forest" class="grow">
+                </a>
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
                 <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
@@ -105,7 +110,7 @@
                         <a class="nav-link" href="https://www.reasonstudios.com/" target="_blank">Reason Studios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
                     </li>
                 </ul>
@@ -113,7 +118,7 @@
                 <h3 class="mt-4">My Songs Sample</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
                     </li>
                     <li class="nav-item">
@@ -123,25 +128,25 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             My Fantasy Boy (Feat. Janira R.)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             What I'm Looking For (Feat. Young Amazin)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             No More Dutch (Feat. Young Amazin)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" 
+                        <a class="nav-link"
                            href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             Me Just F*#king Around
                         </a>
