touched up the contact page with testimonials

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
+    <style>
+        #logo1 {
+            width: 450px; /* screen width */
+            height: 170px; /* screen height */
+            background-image: url("/images/music_staff_transparent.png");
+            background-repeat: no-repeat;
+            background-size: 375px;
+        }
+    </style>
 </head>
 <body>
     <header-component></header-component>
@@ -20,7 +29,7 @@
                          alt="Forest" class="grow">
                 </a>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-4">
                 <p class="contact">
                     <strong>Terrence Lennon</strong>
                     <br>
@@ -29,6 +38,8 @@
                     Home: 732.633.1560 <br>
                     <a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@gmail.com</a>
                 </p>
+            </div>
+            <div class="col-sm-4" id="logo1">
             </div>
         </div>
         <span>
@@ -42,13 +53,21 @@
             <img src="images/testimonial_logo_clear.png"
                  alt="Cinque Terre" class="nohover">
             <p class="reviewer">
-                <span class="reviewer">Julie... </span>I wanted to create a demo
+                <span class="reviewer">Julie B... </span>"I wanted to create a demo
                 to upload it one of those cloud composer services so my friends and family can hear me sing.
                 I had no idea whet the music should sound like other than what was in my head. IKP recorded
                 my vocals on a track and when I returned, they produced a beat that matched perfectly.
                 They even overdubbed my vocals and created harmony backing tracks with my own voice.
                 They tuned everything so that I sounded perfect. It was AMAZING and
-                my freinds say I should submit the track to a record compnay. WOW!...
+                my freinds say I should submit the track to a record compnay. WOW!..."
+                </p>
+            <p class="reviewer">
+                <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
+                and heard about the project studio through a friend. I needed some beats that no one
+                has ever heard of like those free commercial beats they sell online that everyone 
+                uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks. 
+                I've been giging with own music ever since and come back when I have new ideas to lay
+                down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED!..."
             </p>
         </div>
     </div>
