updated studio page added carasol

--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,14 @@
             <div class="col-sm-4">
                 <p class="contact">
                     <strong>Terrence Lennon</strong>
-                    <br>
-                    <strong>1234 Main Street</strong> <br>
+                </p>
+                <address style="margin-left:15px">
+                    1234 Main Street <br>
                     Somerset, NJ 08641<br>
                     Home: 732.633.1560 <br>
-                    <a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@gmail.com</a>
-                </p>
+                    <strong>Email: </strong><a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@gmail.com</a>
+                </address>
+
             </div>
             <div class="col-sm-4" id="logo1">
             </div>
@@ -52,6 +54,8 @@
         <div class="col-sm-12">
             <img src="images/testimonial_logo_clear.png"
                  alt="Cinque Terre" class="nohover">
+        </div>
+        <article>
             <p class="reviewer">
                 <span class="reviewer">Julie B... </span>"I wanted to create a demo
                 to upload it one of those cloud composer services so my friends and family can hear me sing.
@@ -60,16 +64,18 @@
                 They even overdubbed my vocals and created harmony backing tracks with my own voice.
                 They tuned everything so that I sounded perfect. It was AMAZING and
                 my freinds say I should submit the track to a record compnay. WOW!..."
-                </p>
+            </p>
+        </article>
+        <article>
             <p class="reviewer">
                 <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
                 and heard about the project studio through a friend. I needed some beats that no one
-                has ever heard of like those free commercial beats they sell online that everyone 
-                uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks. 
+                has ever heard of like those free commercial beats they sell online that everyone
+                uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
                 I've been giging with own music ever since and come back when I have new ideas to lay
                 down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED!..."
             </p>
-        </div>
+        </article>
     </div>
 </body>
 </html>﻿
