--- a/studio.html
+++ b/studio.html
@@ -3,84 +3,398 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+ <!--   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Ivory Key Productions</title>
+    <!--<base href="images/" target="_blank">-->
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
 </head>
+<style>
+    body {
+        font-family: Verdana, sans-serif;
+        margin: 0;
+    }
+
+    * {
+        box-sizing: border-box;
+    }
+
+    .row > .column {
+        padding: 0 8px;
+        margin-top: 5px;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .column {
+        float: left;
+        width: 15%;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: black;
+    }
+
+    /* Modal Content */
+    .modal-content {
+        position: relative;
+        background-color: dimgrey;
+        margin: auto;
+        padding: 0px;
+        width: 50%;
+        max-width: 1200px;
+    }
+
+    /* The Close Button */
+    .close {
+        color: white;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+        .close:hover,
+        .close:focus {
+            color: #999;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+    .mySlides {
+        display: none;
+        border: none;
+        /*padding: 0px;*/
+
+    }
+
+    .cursor {
+        cursor: pointer;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 40px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+        /* On hover, add a black background color with a little bit see-through */
+        .prev:hover,
+        .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: red;
+        font-size: 24px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+
+    img {
+        margin-bottom: -4px;
+    }
+
+    .caption-container {
+        text-align: center;
+        background-color: black;
+        padding: 2px 16px;
+        color: white;
+    }
+
+    .demo {
+        opacity: 0.6;
+    }
+
+        .active,
+        .demo:hover {
+            opacity: 1;
+        }
+
+    img.hover-shadow {
+        transition: 0.3s;
+    }
+
+    .hover-shadow:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+</style>
 <body>
     <header-component></header-component>
-    <div class="container mt-3">
+
+    <h5 style="text-align:center"><em>Click on any pic to show slide</em></h5>
+
+    <div class="row">
         <div class="column">
-            <a target="_blank" href="images/IMG_401415074034678.jpeg">
-                <img src="images/IMG_401415074034678.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401428141448022.jpeg">
-                <img src="images/IMG_401428141448022.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401435583281513.jpeg">
-                <img src="images/IMG_401435583281513.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401454078886987.jpeg">
-                <img src="images/IMG_401454078886987.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401462002196311.jpeg">
-                <img src="images/IMG_401462002196311.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401469722929955.jpeg">
-                <img src="images/IMG_401469722929955.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401477212004663.jpeg">
-                <img src="images/IMG_401477212004663.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401484204955101.jpeg">
-                <img src="images/IMG_401484204955101.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401491884581568.jpeg">
-                <img src="images/IMG_401491884581568.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401500056151390.jpeg">
-                <img src="images/IMG_401500056151390.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401508005248072.jpeg">
-                <img src="images/IMG_401508005248072.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401535260466577.jpeg">
-                <img src="images/IMG_401535260466577.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401543257170678.jpeg">
-                <img src="images/IMG_401543257170678.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401550320342067.jpeg">
-                <img src="images/IMG_401550320342067.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401529608122827.jpeg">
-                <img src="images/IMG_401529608122827.jpeg"
-                     alt="Forest" class="grow">
-            </a>
-            <a target="_blank" href="images/IMG_401521836241723.jpeg">
-                <img src="images/IMG_401550320342067.jpeg"
-                     alt="Forest" class="grow">
-            </a>
+            <img src="images/studio/IMG_401415074034678.jpeg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401428141448022.jpeg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401435583281513.jpeg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401454078886987.jpeg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401462002196311.jpeg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401469722929955.jpeg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401477212004663.jpeg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401484204955101.jpeg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401491884581568.jpeg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401500056151390.jpeg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401508005248072.jpeg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401521836241723.jpeg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401529608122827.jpeg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401535260466577.jpeg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401543257170678.jpeg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401550320342067.jpeg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
         </div>
     </div>
+
+    <div id="myModal" class="modal">
+        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+
+            <div class="mySlides">
+                <div class="numbertext">1 / 16</div>
+                <img src="images/studio/IMG_401415074034678.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">2 / 16</div>
+                <img src="images/studio/IMG_401428141448022.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">3 / 16</div>
+                <img src="images/studio/IMG_401435583281513.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">4 / 16</div>
+                <img src="images/studio/IMG_401454078886987.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">5 / 16</div>
+                <img src="images/studio/IMG_401462002196311.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">6 / 16</div>
+                <img src="images/studio/IMG_401469722929955.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">7 / 16</div>
+                <img src="images/studio/IMG_401477212004663.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">8 / 16</div>
+                <img src="images/studio/IMG_401484204955101.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">9 / 16</div>
+                <img src="images/studio/IMG_401491884581568.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">10 / 16</div>
+                <img src="images/studio/IMG_401500056151390.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">11 / 16</div>
+                <img src="images/studio/IMG_401508005248072.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">12 / 16</div>
+                <img src="images/studio/IMG_401521836241723.jpeg" style="width:100%">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">13 / 16</div>
+                <img src="images/studio/IMG_401529608122827.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">14 / 16</div>
+                <img src="images/studio/IMG_401535260466577.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">15 / 16</div>
+                <img src="images/studio/IMG_401543257170678.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">16 / 16</div>
+                <img src="images/studio/IMG_401550320342067.jpeg" style="width:100%">
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            <div class="caption-container">
+                <p id="caption"></p>
+            </div>
+
+
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401415074034678.jpeg" style="width:100%" onclick="currentSlide(1)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401428141448022.jpeg" style="width:100%" onclick="currentSlide(2)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401435583281513.jpeg" style="width:100%" onclick="currentSlide(3)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401454078886987.jpeg" style="width:100%" onclick="currentSlide(4)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401462002196311.jpeg" style="width:100%" onclick="currentSlide(5)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401469722929955.jpeg" style="width:100%" onclick="currentSlide(6)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401477212004663.jpeg" style="width:100%" onclick="currentSlide(7)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401484204955101.jpeg" style="width:100%" onclick="currentSlide(8)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401491884581568.jpeg" style="width:100%" onclick="currentSlide(9)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401500056151390.jpeg" style="width:100%" onclick="currentSlide(10)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401508005248072.jpeg" style="width:100%" onclick="currentSlide(11)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401521836241723.jpeg" style="width:100%" onclick="currentSlide(12)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401529608122827.jpeg" style="width:100%" onclick="currentSlide(13)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401535260466577.jpeg" style="width:100%" onclick="currentSlide(14)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401543257170678.jpeg" style="width:100%" onclick="currentSlide(15)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401550320342067.jpeg" style="width:100%" onclick="currentSlide(16)">
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function openModal() {
+            document.getElementById("myModal").style.display = "block";
+        }
+
+        function closeModal() {
+            document.getElementById("myModal").style.display = "none";
+        }
+
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("demo");
+            var captionText = document.getElementById("caption");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+            captionText.innerHTML = dots[slideIndex - 1].alt;
+        }
+    </script>
+
     <footer-component></footer-component>
+
 </body>
 
 </html>
